# video_tennis_analysis

./: .gitignore  README.md  RESUMO_PROJETO.md  pyproject.toml
config/: label_studio_config_video.json  label_studio_exports.json  xml_video_frames.xml  xml_video_timeline.xml
documentacao/: 00_GETTING_STARTED.md  04_DATA_CONFIGURATION.md  05_MODEL_OPTIMIZATION.md  06_GRID_SEARCH.md  07_MLFLOW_TRACKING.md  08_VIDEO_PREPROCESSING.md  09_DEVELOPMENT_NOTES.md  ARCHITECTURE_GUIDE.md  CHANGES_SUMMARY.md  CLASS_WEIGHTS_EXPLAINED.md  FEATURE_SELECTION_GUIDE.md  FPS_SCALING_GUIDE.md  MLFLOW_COMPLETE_GUIDE.md  MLFLOW_GUIDE.md  MLFLOW_METRICS_GUIDE.md  MODEL_IMPROVEMENTS.md  MODEL_OPTIMIZATION_GUIDE.md  MODIFICATIONS_MADE_TO_VIDEOS.md  POSE_FEATURES_EXPLAINED.md  POSE_VISUALIZATION_GUIDE.md  PREDICTION_ALIGNMENT_GUIDE.md  QUICK_START_TUNING.md  README_DOCS.md  SEQUENCE_CREATION_EXPLAINED.md  STATIC_ZOOM_EXAMPLE.md  SUPPRESSING_WARNINGS.md  TUNING_GUIDE.md  USAGE_GUIDE.md  VIDEO_ANNOTATION_GUIDE.md  exemplo_output_train_model.md
src/: analyze_annotations.py  batch_preprocess.py  check_gpu.py  convert_videos.bat  detect_strokes.py  extract_poses.py  grid_search.py  grid_search_configs.py  preprocess_video.py  train_model.py  verify_annotation.py  visualize_pose.py
test/: open_model.ipynb
