[project]
name = "video-tennis-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Hasmann",email = "gfreire57@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "mediapipe>=0.10.21,<0.11.0",
    "opencv-python==4.10.0.84",
    "ipykernel>=7.1.0,<8.0.0",
    "scikit-learn>=1.7.2,<2.0.0",
    "tensorflow>=2.17.0,<2.19.0",
    "matplotlib>=3.9.0,<4.0.0",
    "mlflow>=2.18.0,<3.0.0",
    "seaborn>=0.13.0,<0.14.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
